# cdn

./: .gitignore  Cargo.toml  LICENSE.md  README.md  flake.nix  justfile  rustfmt.toml
.sqlx/: query-1cc875081b63520695746cc250c079cd7e6ea7a9bcf5677baa939013a4db119b.json  query-29b216094d3d32076f8d62adac7bc38351082c9878d6ba6c408671b67850dc70.json  query-e550ffb5623da1b733b1a2dced2e2a4d26c5f50eba49ebe735aa1f9a4483655f.json
crates/database/: Cargo.toml
crates/database/src/: lib.rs
crates/database/src/models/: bucket.rs  mod.rs  user.rs
crates/database/src/utils/: connection.rs  error.rs
crates/logger/: Cargo.toml
crates/logger/src/: colors.rs  lib.rs
crates/macros_utils/: Cargo.toml
crates/macros_utils/src/: lib.rs  ternary.rs
migrations/: 20250328213115_add_users.up.sql  20250328213832_add_buckets.down.sql  20250328213832_add_buckets.up.sql  20250328214049_add_api_keys.down.sql  20250328214049_add_api_keys.up.sql  20250328214325_add_objects.up.sql  20250328214747_add_access_policies.down.sql  20250328214747_add_access_policies.up.sql
server/: Cargo.toml
server/src/: lib.rs
server/src/extractors/: auth.rs
server/src/routes/: mod.rs
server/src/routes/test/: mod.rs  read.rs
